--- a/system.properties
+++ b/system.properties
@@ -1,2 +1,7 @@
 java.runtime.version=11
 maven.version=3.6.2
+
+#Acima antes da alteracao
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
